# atradlib

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  atradlib.py  mcm_atmospheric_radiation.ipynb  mie_phasefunction_radar.ipynb  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/atradlib/: __init__.py  atradlib.py  cli.py
tests/: __init__.py  test_atradlib.py
